fix(portal): fix image spacing
affects: @fremtind/portal

--- a/portal/src/components/PortalImg/style.scss
+++ b/portal/src/components/PortalImg/style.scss
@@ -6,8 +6,13 @@
     background-color: transparent;
     text-align: left;
     cursor: pointer;
-    margin-top: $layout-spacing--medium;
     display: block;
+    padding: 0;
+    margin-top: $layout-spacing--medium;
+
+    &--no-margin {
+        margin-top: 0;
+    }
 
     &__img {
         max-width: 100%;
